# sdfs

./: .gitignore  CMakeLists.txt  COPYING  README  README.md  config.h.in  sdfs-ctrl.service  sdfs-dd-mgr.service  sdfs-dd.target  sdfs-dd@.service  sdfs.conf.sample  sdfs.sample.conf  todo.rst
debian/: changelog  control  libsdfs-dev.install  libsdfs-ds-1-0.install  libsdfs-fs-1-0.install  rules  sdfs-ctrl.install  sdfs-dd.install
doc/: protocol.rst
src/: CMakeLists.txt
src/client/: CMakeLists.txt  fs_utils.cc  fs_utils.h  sdfs_ds.cc  sdfs_ds_internal.h  sdfs_ds_tool.cc  sdfs_ds_wrapper.cc  sdfs_fs.cc  sdfs_fs_internal.h  sdfs_fs_wrapper.cc  sdfs_fuse.cc  sdfs_mkfs.cc  sync_call_utils.h
src/client/include/: sdfs_ds.h  sdfs_fs.h
src/common/: daemon_utils.cc  daemon_utils.h  dynamic_buffer.h  epoll.cc  epoll.h  error_codes.h  eventfd.cc  eventfd.h  exceptions.cc  exceptions.h  file_config.cc  file_config.h  fixed_buffer.h  io_uring.cc  io_uring.h  logging.h  msg_utils.h  open_list.h  profiler.cc  profiler.h  prot_client.cc  prot_client.h  prot_common.cc  prot_common.h  prot_ctrl.cc  prot_ctrl.h  prot_dd.cc  prot_dd.h  prot_dd_mgr.cc  prot_dd_mgr.h  protocols.h  semaphore.cc  semaphore.h  serialization.h  signalfd.cc  signalfd.h  strformat.cc  strformat.h  timerfd.cc  timerfd.h  (+3 more)
src/ctrl/: CMakeLists.txt  ctrl.cc  ctrl_ctx.cc  ctrl_ctx.h
src/dd/: CMakeLists.txt  dd.cc  dd_ctx.cc  dd_ctx.h  ddinfo.cc  mkdd.cc  utils.cc  utils.h
src/dd-mgr/: CMakeLists.txt  dd_mgr.cc  dd_mgr_ctx.cc  dd_mgr_ctx.h
src/fuse/: CMakeLists.txt  cache.cc  cache.h  com_ctx.cc  com_ctx.h  fuse.cc  fuse_ctx.cc  fuse_ctx.h
